missing quotes escape character

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -490,7 +490,7 @@
         <item>You are one click away from sharing your thoughtsকেবলমাত্র একটা ক্লিকের মাধ্যমে আপনি আপনার চিন্তাভাবনা, মতামত এবং অভিজ্ঞতাগুলি ভারতের সবচেয়ে বড় প্যারেন্টিং সম্প্রদায় "মমস্প্রেস্সো"-র সাথে ভাগ করে নিতে পারেন, যা প্রতি মাসে ৮ মিলিয়ন মায়েদের কাছে পৌছে যেতে পারে এক আশানরূপ, অনুপ্রেরণাদায়ক কন্ঠস্বর হিসাবে |</item>
         <item>আপনার প্যারেন্টিং-এর গল্পগুলি আপনি আমাদের ওয়েবসাইট বা  iOS এবং Android অ্যাপের মাধ্যমে ভাগ করে নিতে পারেন | আপনার গল্পগুলি যে কোনো একটি ভাষায় লিখুন- বাংলা, ইংরাজি, হিন্দি,মারাঠি, তেলুগু এবং তামিল |</item>
         <item>মমস্প্রেস্সো প্রত্যেক ব্লগারকে নিজের লেখা পোস্ট প্রকাশ করার জন্য কোন অর্থ প্রদান করে না | তবে বিশেষ লেখাগুলির জন্য অর্থ প্রদান করে হয়ে থাকে যা ব্র্যান্ডের দ্বারা অনুমোদিত, এই অফারটি শুধুমাত্র ব্লগারদের লেখার মানের ভিত্তিতেই প্রদান করা হয় ।</item>
-        <item>আপনার গল্প যদি পিতামাতা, নারীত্ব, জীবন সংগ্রাম, আনন্দের মুহুর্তের বা ব্যক্তিগত সম্পর্ক বিশেষ হয়ে থাকে তাহলে লেখার জন্য "মমস্প্রেস্সো" একটি আদর্শ প্ল্যাটফর্ম । যোগদান করে ৩৫০০+ মায়েদের সাথে আপনার পরামর্শ, মতামত এবং অভিজ্ঞতাগুলি ভাগ করে নিন। অনুগ্রহ করে কোনো নকল বা 'সামান্য পরিবর্তিত' বিষয়বস্তু প্রকাশ করবেননা |</item>
+        <item>আপনার গল্প যদি পিতামাতা, নারীত্ব, জীবন সংগ্রাম, আনন্দের মুহুর্তের বা ব্যক্তিগত সম্পর্ক বিশেষ হয়ে থাকে তাহলে লেখার জন্য "মমস্প্রেস্সো" একটি আদর্শ প্ল্যাটফর্ম । যোগদান করে ৩৫০০+ মায়েদের সাথে আপনার পরামর্শ, মতামত এবং অভিজ্ঞতাগুলি ভাগ করে নিন। অনুগ্রহ করে কোনো নকল বা \'সামান্য পরিবর্তিত\' বিষয়বস্তু প্রকাশ করবেননা |</item>
     </string-array>
 
     <string name="upload_video.title">SHARE A MomVlog\n THAT CAPTURES #MOMLIFE</string>
