Todays Best Listing

--- a/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values-bn/strings.xml
@@ -568,6 +568,7 @@
     <string name="article_listing.toolbar.title_popular">জনপ্রিয়</string>
     <string name="article_listing.toolbar.title_trending">ট্রেন্ডিং</string>
     <string name="article_listing.toolbar.title_for_you">আপনাদের জন্য</string>
+    <string name="article_listing.toolbar.title_todays_best">TODAY\'S BEST</string>
     <string name="article_listing.toolbar.title_editor_picks">সম্পাদকের পছন্দ</string>
 
     <string name="sort.recent">নতুন</string>
@@ -609,6 +610,7 @@
 
     <string name="article_listing.type.trending_label">ট্রেন্ডিং</string>
     <string name="article_listing.type.editor_label">সম্পাদকের পছন্দ</string>
+    <string name="article_listing.type.todays_best_label">TODAY\'S BEST</string>
     <string name="article_listing.type.for_you_label">আপনাদের জন্য</string>
     <string name="article_listing.type.languages_label">LANGUAGES</string>
     <string name="article_listing.type.videos_label">ভিডিও</string>
