--- a/MyCity4Kids/MyCity4Kids/res/values/strings.xml
+++ b/MyCity4Kids/MyCity4Kids/res/values/strings.xml
@@ -669,5 +669,9 @@
     <string name="groups.join_group">JOIN GROUP</string>
     <string name="groups.choose_media">Choose media to upload</string>
     <string name="groups.search_in">Search in</string>
+    <string name="groups.post_comment">Comments</string>
+    <string name="groups.post_helpful">Helpful</string>
+    <string name="groups.post_nothelpful">Not Helpful</string>
+    <string name="groups.post_label">POST</string>
 
 </resources>
